@@ -1,7 +1,7 @@
 module.exports = {
 	name: 'ip',
 	description: "Responds with the PCN IP",
-	execute(message, args) {
+	execute(client, message, args, Discord) {
 		message.channel.send(`Hey ${message.author}, the IP is **play.plaguecraft.xyz**!`)
 	}
 }
