@@ -1,9 +1,7 @@
-const Discord = require('discord.js');
-
 module.exports = {
     name: 'unmute',
     description: "PCN Unmute Command",
-    execute(message, args, Discord, client) {
+    execute(client, message, args, Discord) {
             const target = message.mentions.users.first();
         
             if(!message.member.roles.cache.some(r => r.name === "Mod Bot User")){
