@@ -1,7 +1,7 @@
 module.exports = {
 	name: 'report-resp',
 	description: 'Gives mods the ability to DM users via the bot',
-	execute(message, args, Discord, client) {
+	execute(client, message, args, Discord) {
 		
 		if(!message.member.roles.cache.some(r => r.name === "Mod Bot User")){
 			return message.channel.send('You do not have the permissions to run this command!')
