@@ -1,0 +1,3 @@
+module.exports = () =>{
+    console.log('Initiated the PlagueCraft Network Discord Bot -- Online and ready to go!');
+}
