@@ -11,3 +11,5 @@ ban ourselves lmao)
 #7 - Updated the changelog file!
 #8 - Incl. package.json for easy install!
 #9 - Also added Linux (.sh) and Windows (.bat) files to easily obtain this & update!
+
+IMPORTANT - We've updated the ENTIRE bot and how events are handled! Check it out!!!!!!!!
